--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>My App</title>
+    <title>SlideTomator</title>
     <meta name="description" content="SlideTomator">
 
     <link rel="icon" href="/images/favicon.ico">
@@ -100,8 +100,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </script>
 
     <link rel="import" href="/src/slidetomator-shell.html">
-
-    <link rel="stylesheet" href="/src/generic-styles.css">
+    <link rel="stylesheet" href="/src/css/generic-styles.css">
   </head>
   <body>
     <slidetomator-shell></slidetomator-shell>
