--- a/src/slide-html5bg.html
+++ b/src/slide-html5bg.html
@@ -17,17 +17,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="slide-html5bg">
   <template>
     <style include="shared-styles">
-        :host {
-            @apply(--flex);
-        }
-        
-        ::shadow h1 {
-
-            /* font */
-            color:var(--white);
-            font-family: var(--font-family-type1);
-        }
-
+       :host {
+        @apply(--flex);
+      }
+      
+      h1 {
+        /* font */
+        color: var(--white);
+        font-family: var(--font-family-type1);
+      }
     </style>
 
     <div class="card" card-center>
@@ -40,5 +38,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     Polymer({
       is: 'slide-html5bg'
     });
+    class SlideHtml5bg extends Polymer.Element {
+      static get is() {
+        return 'slide-html5bg';
+      }
+    }
+
+    window.customElements.define(SlideHtml5bg.is, SlideHtml5bg);
   </script>
 </dom-module>
