--- a/src/slide-ui-1.html
+++ b/src/slide-ui-1.html
@@ -17,11 +17,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="slide-ui-1">
   <template>
     <style include="shared-styles">
-      :host {
+       :host {
         @apply(--flex);
       }
-
-      ::shadow h1 {
+      
+      h1 {
         color: var(--orange);
       }
     </style>
@@ -37,8 +37,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </template>
 
   <script>
-    Polymer({
-      is: 'slide-ui-1',
-    });
+    class SlideUi1 extends Polymer.Element {
+      static get is() {
+        return 'slide-ui-1';
+      }
+    }
+
+    window.customElements.define(SlideUi1.is, SlideUi1);
   </script>
 </dom-module>
