--- a/src/slide-ui-4.html
+++ b/src/slide-ui-4.html
@@ -16,7 +16,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="slide-ui-4">
   <template>
     <style include="shared-styles">
-      :host {
+       :host {
         @apply(--flex);
       }
     </style>
@@ -28,8 +28,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </template>
 
   <script>
-    Polymer({
-      is: 'slide-ui-4',
-    });
+    class SlideUi4 extends Polymer.Element {
+      static get is() {
+        return 'slide-ui-4';
+      }
+    }
+
+    window.customElements.define(SlideUi4.is, SlideUi4);
   </script>
 </dom-module>
