--- a/src/slide-ui-9.html
+++ b/src/slide-ui-9.html
@@ -17,12 +17,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="slide-ui-9">
   <template>
     <style include="shared-styles">
-      :host {
+       :host {
         @apply(--flex);
       }
-
-      ::shadow h1 {
-        /* font */  
+      
+      h1 {
+        /* font */
         color: var(--orange);
       }
     </style>
@@ -38,8 +38,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </template>
 
   <script>
-    Polymer({
-      is: 'slide-ui-9',
-    });
+    class SlideUi9 extends Polymer.Element {
+      static get is() {
+        return 'slide-ui-9';
+      }
+    }
+
+    window.customElements.define(SlideUi9.is, SlideUi9);
   </script>
 </dom-module>
