--- a/src/slide-webapp.html
+++ b/src/slide-webapp.html
@@ -17,17 +17,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="slide-webapp">
   <template>
     <style include="shared-styles">
-        :host {
-            @apply(--flex);
-        }
-        
-        ::shadow h1 {
-
-            /* font */
-            color:var(--white);
-            font-family: var(--font-family-type1);
-        }
-
+       :host {
+        @apply(--flex);
+      }
+      
+      h1 {
+        /* font */
+        color: var(--white);
+        font-family: var(--font-family-type1);
+      }
     </style>
 
     <div class="card" card-center>
@@ -37,8 +35,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   </template>
 
   <script>
-    Polymer({
-      is: 'slide-webapp'
-    });
+    class SlideWebapp extends Polymer.Element {
+      static get is() {
+        return 'slide-webapp';
+      }
+    }
+
+    window.customElements.define(SlideWebapp.is, SlideWebapp);
   </script>
 </dom-module>
