feat(polymer-2): change @apply syntax

--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -79,7 +79,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       
       .card {
         /* flex */
-        @apply(--flex);
+        @apply --flex;
         flex-flow: column nowrap;
         /* layout */
         position: relative;
@@ -255,7 +255,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       
       slice-imgbg {
         /* flex */
-        @apply(--flex);
+        @apply --flex;
         align-items: flex-start;
         /* layout */
         position: absolute;
