--- a/src/slide-html5team.html
+++ b/src/slide-html5team.html
@@ -18,7 +18,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template>
     <style include="shared-styles">
        :host {
-        @apply(--flex);
+        @apply --flex;
       }
       
       h1 {
