--- a/src/slide-ui-15.html
+++ b/src/slide-ui-15.html
@@ -16,7 +16,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template>
     <style include="shared-styles">
        :host {
-        @apply(--flex);
+        @apply --flex;
       }
       
       h1 {
